--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,45 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>BillsApp</title>
+    <style>
+      .loading {
+        -webkit-animation: sk-scaleout 1s infinite ease-in-out;
+        animation: sk-scaleout 1s infinite ease-in-out;
+        background-color: #124c62;
+        border-radius: 100%;
+        height: 6em;
+        width: 6em;
+      }
+
+      .container {
+        align-items: center;
+        background-color: white;
+        display: flex;
+        height: 100vh;
+        justify-content: center;
+        width: 100vw;
+      }
+
+      @keyframes sk-scaleout {
+        0% {
+          -webkit-transform: scale(0);
+          transform: scale(0);
+        }
+        100% {
+          -webkit-transform: scale(1);
+          opacity: 0.5;
+          transform: scale(1);
+        }
+      }
+    </style>
   </head>
   <body style="margin: 0px">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="spinner" class="container">
+      <!-- <div class="loading"></div> -->
+      <img src="applogo.gif" alt="" preloader />
+    </div>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
