--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       }
 
       .container {
+        position:fixed,
         align-items: center;
         background-color: white;
         display: flex;
